# CppChannels

./: CMakeLists.txt  main.cpp
include/: channel.hpp
tests/: channel_test.cpp  channel_test_2.cpp  move_copy_test.cpp
